--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.1.2",
     "hover": "2.0.0",
     "angular-ui-router": "1.0.3",
-    "oclazyload": "^1.1.0"
+    "oclazyload": "^1.1.0",
+    "jquery-smooth-scroll": "2.2.0"
   }
 }
