--- a/bower.json
+++ b/bower.json
@@ -12,8 +12,8 @@
     "angular-file-upload": "2.5.0",
     "angular-mocks": "~1.5.0",
     "html5-boilerplate": "^5.3.0",
-    "jQuery": "^3.3.1",
-    "bootstrap": "^4.1.2",
+    "bootstrap": "^3.3.7",
+    "bootstrap-contextmenu": "^0.3.4",
     "hover": "2.0.0",
     "angular-ui-router": "1.0.3",
     "oclazyload": "^1.1.0"
