--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "html5-boilerplate": "^5.3.0",
     "bootstrap": "^3.3.7",
     "bootstrap-contextmenu": "^0.3.4",
+    "bootstrap-colorpicker": "^2.5.3",
     "hover": "2.0.0",
     "angular-ui-router": "1.0.3",
     "oclazyload": "^1.1.0"
