--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
     "bootstrap-colorpicker": "^2.5.3",
     "hover": "2.0.0",
     "angular-ui-router": "1.0.3",
+    "angular-animate": "^1.0",
+    "angular-loading-bar": "^0.9.0",
     "oclazyload": "^1.1.0"
   }
 }
