--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular-ui-router": "1.0.3",
     "angular-animate": "^1.0",
     "angular-loading-bar": "^0.9.0",
-    "oclazyload": "^1.1.0"
+    "oclazyload": "^1.1.0",
+    "html2canvas": "^0.4.1"
   }
 }
