--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular-animate": "^1.0",
     "angular-loading-bar": "^0.9.0",
     "oclazyload": "^1.1.0",
-    "html2canvas": "^0.4.1"
+    "html2canvas": "^0.4.1",
+    "swiper": "^4.3.5"
   }
 }
