--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "angular-file-upload": "2.5.0",
     "angular-mocks": "~1.5.0",
     "html5-boilerplate": "^5.3.0",
-    "jQuery": "^3.3.1",
+    "jquery": "^2.2.4",
     "bootstrap": "^3.3.7",
     "bootstrap-contextmenu": "^0.3.4",
     "bootstrap-colorpicker": "^2.5.3",
