--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
     "hover": "2.0.0",
     "angular-ui-router": "1.0.3",
     "jquery-smooth-scroll": "2.2.0",
-    "echarts":"3.1.1",
+    "echarts":"^3.1.1",
     "angular-loading-bar": "^0.9.0",
     "oclazyload": "^1.1.0",
     "html2canvas": "^0.4.1",
